--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -13,15 +13,21 @@
   align-items: flex-start;
   justify-content: space-between;
   min-height: calc(100vh - var(--header-height));
-  max-width: var(--page-max-width);
+  //   max-width: var(--page-max-width);
   margin-left: auto;
   margin-right: auto;
   margin-top: var(--header-height);
   padding: var(--spacing-l); // Unfortunately this is coupled with .claim-preview--tile width calculation
+  padding-left: 0;
 
   @media (max-width: $breakpoint-small) {
-    padding: var(--spacing-s);
+    padding: var(--spacing-xs);
   }
+}
+
+.main-wrapper__inner--full {
+  //   padding: 0;
+  max-width: none;
 }
 
 .main {
@@ -30,10 +36,37 @@
   margin-right: auto;
   margin-left: auto;
 
-  @media (max-width: $breakpoint-small) {
+  @media (max-width: $breakpoint-medium) {
     width: 100%;
-    margin-right: 0;
-    margin-left: 0;
+    margin-right: var(--spacing-s);
+    margin-left: var(--spacing-s);
+  }
+
+  //   @media (max-width: $breakpoint-small) {
+  //     width: 100%;
+  //     margin-right: 0;
+  //     margin-left: 0;
+  //   }
+}
+
+.main--file-page {
+  width: 100%;
+  max-width: var(--page-max-width--filepage);
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+
+  &:first-child {
+    flex: 1;
+    width: 100%;
+  }
+
+  .file-page__recommended {
+    width: 25rem;
+
+    @media (max-width: $breakpoint-large) {
+      max-width: 25rem;
+    }
   }
 }
 
