--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -55,18 +55,19 @@
   margin-left: auto;
   margin-right: auto;
   display: flex;
+  padding-left: var(--spacing-m);
 
-  &:first-child {
+  > :first-child {
     flex: 1;
-    width: 100%;
+    margin-right: var(--spacing-m);
   }
 
   .file-page__recommended {
     width: 25rem;
+  }
 
-    @media (max-width: $breakpoint-large) {
-      max-width: 25rem;
-    }
+  @media (max-width: $breakpoint-medium) {
+    flex-direction: column;
   }
 }
 
