--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -45,6 +45,9 @@
   @extend .navigation-links;
   margin-right: var(--spacing-m);
 }
+.navigation--filepage {
+  z-index: 1000;
+}
 
 .navigation-links--absolute {
   @extend .navigation-links;
@@ -58,7 +61,32 @@
   overflow-y: scroll;
   background-color: var(--color-card-background);
   box-shadow: var(--card-box-shadow);
-  z-index: 5;
+  z-index: 100;
+
+  .navigation-link {
+    text-align: left;
+    margin-bottom: 0;
+
+    .icon {
+      height: 1rem;
+      width: 1rem;
+    }
+
+    .button__content {
+      flex-direction: row;
+    }
+
+    .button__label {
+      margin-top: 0;
+      margin-left: var(--spacing-m);
+      font-size: var(--font-body);
+      font-weight: var(--font-weight-bold);
+    }
+
+    &:focus {
+      box-shadow: none;
+    }
+  }
 }
 
 .navigation-link {
@@ -146,14 +174,11 @@
 .navigation-link {
 }
 
-// .navigation-links--small {
-//   @extend .navigation-links;
-//   font-size: var(--font-small);
-//   width: var(--side-nav-width--compresed);
-//   @media (max-width: $breakpoint-large) {
-//     display: none;
-//   }
-// }
+.navigation-links--small {
+  @extend .navigation-links;
+  font-size: var(--font-small);
+  width: var(--side-nav-width--compresed);
+}
 
 // .navigation-links__inline {
 //   margin-left: calc(var(--spacing-m) + var(--spacing-s));
